# asyncapi-python

./: .gitignore  pyproject.toml  test_consumer.py  test_producer.py
.devcontainer/: devcontainer.json
examples/: amqp-baic-notifier.yaml  amqp-basic-working-queue.yaml  amqp-basic.yaml
src/asyncapi_python/: __init__.py
src/asyncapi_python/amqp/: base.py  connection.py  consumer.py  message_handler.py  utils.py
src/asyncapi_python/generators/: amqp_rabbitmq.py
src/asyncapi_python/generators/amqp_rabbitmq/: document.py
src/asyncapi_python/generators/amqp_rabbitmq/document/: __init__.py  channel.py
src/asyncapi_python/generators/amqp_rabbitmq/templates/: base.py.j2  consumer.py.j2  producer.py.j2
src/asyncapi_python/parser/: __init__.py  expand_refs.py
src/asyncapi_python_codegen/: __init__.py
src/asyncapi_python_codegen/generators/: __init__.py
src/asyncapi_python_codegen/generators/amqp_rabbitmq/: __init__.py
src/asyncapi_python_codegen/generators/amqp_rabbitmq/document/bindings/: __init__.py  amqp.py
src/asyncapi_python_codegen/generators/amqp_rabbitmq/templates/: consumer.py.j2  producer.py.j2
src/asyncapi_python_codegen/parser/: __init__.py  document.py  expand_refs.py
tests/: conftest.py
tests/amqp_rabbitmq/: test_document.py
tests/core/amqp/: test_message_handler.py
tests/parser/: test_expand_refs.py
